<resources>
    <string name="app_name">AD INFINITUM</string>
    <string name="action_settings">Settings</string>
    <string name="title_player">PROFILE</string>
    <string name="player_name">Name: Sheeple</string>
    <string name="continuous_high_score_text">Continuous High Scores </string>
    <string name="rounds_high_score_text">Rounds High Scores </string>
    <string name="reset_text">Reset</string>

    <string name="playtime">Time Played(s):</string>
    <string name="longest_game">Longest(Cont.):</string>
    <string name="most_rounds">Most(Rounds):</string>

    <string name="default_playtime">0</string>
    <string name="default_longest_game">0</string>
    <string name="default_most_rounds">0</string>

    <string name="default_high_scores_ranks">1. [Player]\t\t0,2. [Player]\t\t0,3. [Player]\t\t0,4. [Player]\t\t0,5. [Player]\t\t0,6. [Player]\t\t0,7. [Player]\t\t0,8. [Player]\t\t0,9. [Player]\t\t0,10. [Player]\t\t0</string>
    <string name="default_high_scores">[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0,[Player]\t\t0</string>

    <string name="continuous_high_scores_title">Least Pitiful Continuous Scores\n</string>
    <string name="rounds_high_scores_title">Least Pitiful Rounds Scores\n</string>
    <string name="high_score_one">[Player]\t\t0</string>
    <string name="high_score_two">[Player]\t\t0</string>
    <string name="high_score_three">[Player]\t\t0</string>
    <string name="high_score_four">[Player]\t\t0</string>
    <string name="high_score_five">[Player]\t\t0</string>
    <string name="high_score_six">[Player]\t\t0</string>
    <string name="high_score_seven">[Player]\t\t0</string>
    <string name="high_score_eight">[Player]\t\t0</string>
    <string name="high_score_nine">[Player]\t\t0</string>
    <string name="high_score_ten">[Player]\t\t0</string>

    <!-- Strings related to Game Play -->
    <string name="default_score">0</string>
    <string name="time_elapsed">Time: 0000</string>
    <string name="play_again">Play Again?</string>
    <string name="give_up">Give Up,</string>
    <string name="rounds_lose_message">Restart at Round 1,</string>
    <string name="okay">Okay</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="keep_going">Continue to the next round?</string>

    <!-- Strings related to About -->
    <string name="how_to_play">HOW TO:\n\nDismiss the ads by clicking within the grey boxes on each one. Points are awarded based upon the area of the ad, with more points for littler ads. Clicking anywhere outside the grey boxes results in fixed amount point deductions.You lose Continuous mode if too many ads are active on screen. You lose Rounds mode if too many ads are left when the time runs out.\n\nBut will you falter in the face of ad-versity? </string>
    <string name="credits">CREATED BY / PROGRAMMED BY\nJoy Alam, Chrystian Bueno, Miguel Chavira\n\nClick these windows to view your prize!</string>
    <string name="programmer_names">Joy Alam, Chrystian Bueno, Miguel Chavira</string>

    <!-- Strings related to Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_modes">Modes</string>
    <string name="settings_difficulty_level">Difficulty Level</string>
    <string name="settings_sound_fx_volume">Sound FX Volume</string>
    <string name="settings_soundtrack_volume">Soundtrack Volume</string>
    <string name="settings_sound_button">Button Sound</string>
    <string name="button_modes_selection">Continuous</string>
    <string name="button_difficulty_selection">Insane</string>
    <string name="title_activity_settings">Settings</string>

    <string name="mode_continuous">Continuous</string>
    <string name="mode_rounds">Rounds</string>
    <string name="difficulty_level_easy">Easy</string>
    <string name="difficulty_level_medium">Medium</string>
    <string name="difficulty_level_overload">Overload</string>
    <string name="default_profile_name">Sheeple</string>
    <string name="default_soundtrack">Rave</string>
    <bool name="default_orientation">true</bool>
    <!--<string name="default_sound">50</string>
    <string name="max_sound">100</string>-->
    <bool name="default_soundfx_state">true</bool>
    <bool name="default_soundtrack_state">true</bool>
    <bool name="default_sound_button_state">true</bool>
</resources>
