<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cbueno01.adinfinitum.PlayerProfileActivity"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_player"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="40dp"
        android:textIsSelectable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom">

        <ImageView
            android:id="@+id/player_image"
            android:src="@drawable/goku_picture"
            android:layout_width="158dp"
            android:layout_height="114dp"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:src="@drawable/gallery_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:clickable="true"
            android:onClick="getPicture"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:gravity="center"
                android:textSize="30dp"
                android:textIsSelectable="true"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highscore_text"
                android:gravity="center"
                android:textSize="30dp"
                android:textIsSelectable="true"
                android:layout_marginLeft="20dp" />

    </LinearLayout>
    <Button
        android:layout_width="460dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_text"
        android:textSize="28dp"
        android:textColor="@color/buttonTextColor"
        android:background="@color/buttonColor"
        android:layout_gravity="center_horizontal" />


</LinearLayout>